#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-08-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9966 released.

        * Added logic for --set argument, 'Define New Module Set'
          is now working.


2011-08-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9965 released.

        * Added logic for --set argument.


2011-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9964 released.

        * Makefile.PL fix.


2011-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9963 released.

        * Makefile.PL fix and change default to Setuid.


2011-08-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9962 released.

        * Fixed image_magick in fa_code_demo.pm in Distro.


2011-08-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9961 released.

        * Added fa_code_demo.pm to Distro.


2011-08-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9960 released.

        * Added more code for managing FullAuto user files.


2011-08-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9959 released.

        * More changes to Makefile.PL - changed perms to
          setuid.

        * Added more code for managing FullAuto user files.


2011-08-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9958 released.

        * More changes to Makefile.PL for Win XP.


2011-08-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9957 released.

        * Modified functionality to choose default modules.

