@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9966';
+our $VERSION='0.9967';
 
 
 use 5.005;
