@@ -45,6 +45,13 @@
 ################################################################
 
 
+2011-09-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9967 released.
+
+        * Added logic for more --set features such as 'delete'.
+
+
 2011-08-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9966 released.
